{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 126,
  "lineage": "64d7da6d-29ae-5322-76e4-f0c643cadd9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aeba6117aa87cd94",
            "arn": "arn:aws:ec2:us-east-1:628306021196:elastic-ip/eipalloc-0aeba6117aa87cd94",
            "domain": "vpc",
            "id": "eipalloc-0aeba6117aa87cd94",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-172-69-113.compute-1.amazonaws.com",
            "public_ip": "54.172.69.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "novapay-prod-eks-v2-nat-eip",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-nat-eip",
              "Project": "NovaPay"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:internet-gateway/igw-074b03bc909140b88",
            "id": "igw-074b03bc909140b88",
            "owner_id": "628306021196",
            "tags": {
              "Name": "novapay-prod-eks-v2-igw",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-igw",
              "Project": "NovaPay"
            },
            "vpc_id": "vpc-0e7b29abb114d925d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aeba6117aa87cd94",
            "association_id": "eipassoc-07ba5318f84cbaeae",
            "connectivity_type": "public",
            "id": "nat-02f504b602dfacbbe",
            "network_interface_id": "eni-0c25bdd7bfc9c04d9",
            "private_ip": "10.100.1.59",
            "public_ip": "54.172.69.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-052b46855f49ed0d9",
            "tags": {
              "Name": "novapay-prod-eks-v2-nat",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-nat",
              "Project": "NovaPay"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:route-table/rtb-02bfdf5bb7546c12e",
            "id": "rtb-02bfdf5bb7546c12e",
            "owner_id": "628306021196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02f504b602dfacbbe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "novapay-prod-eks-v2-private-rt",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-private-rt",
              "Project": "NovaPay"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7b29abb114d925d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:route-table/rtb-04f525d70da4f1e03",
            "id": "rtb-04f525d70da4f1e03",
            "owner_id": "628306021196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074b03bc909140b88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "novapay-prod-eks-v2-public-rt",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-public-rt",
              "Project": "NovaPay"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7b29abb114d925d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bbc6899866c66b6",
            "route_table_id": "rtb-02bfdf5bb7546c12e",
            "subnet_id": "subnet-0dcc722679dc33b11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03845b2145695b417",
            "route_table_id": "rtb-02bfdf5bb7546c12e",
            "subnet_id": "subnet-026cf91bef8b142ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8158fa95086b7c9",
            "route_table_id": "rtb-04f525d70da4f1e03",
            "subnet_id": "subnet-052b46855f49ed0d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04582058df29c385c",
            "route_table_id": "rtb-04f525d70da4f1e03",
            "subnet_id": "subnet-0f88e7aefb9f843c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:subnet/subnet-0dcc722679dc33b11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcc722679dc33b11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628306021196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "novapay-prod-eks-v2-private-0",
              "Project": "NovaPay",
              "karpenter.sh/discovery": "novapay-prod-v2",
              "kubernetes.io/cluster/novapay-prod-eks-v2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-private-0",
              "Project": "NovaPay",
              "karpenter.sh/discovery": "novapay-prod-v2",
              "kubernetes.io/cluster/novapay-prod-eks-v2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e7b29abb114d925d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:subnet/subnet-026cf91bef8b142ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026cf91bef8b142ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628306021196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "novapay-prod-eks-v2-private-1",
              "Project": "NovaPay",
              "karpenter.sh/discovery": "novapay-prod-v2",
              "kubernetes.io/cluster/novapay-prod-eks-v2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-private-1",
              "Project": "NovaPay",
              "karpenter.sh/discovery": "novapay-prod-v2",
              "kubernetes.io/cluster/novapay-prod-eks-v2": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e7b29abb114d925d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:subnet/subnet-052b46855f49ed0d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052b46855f49ed0d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628306021196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "novapay-prod-eks-v2-public-0",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-public-0",
              "Project": "NovaPay"
            },
            "vpc_id": "vpc-0e7b29abb114d925d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:subnet/subnet-0f88e7aefb9f843c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f88e7aefb9f843c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628306021196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "novapay-prod-eks-v2-public-1",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-public-1",
              "Project": "NovaPay"
            },
            "vpc_id": "vpc-0e7b29abb114d925d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:628306021196:vpc/vpc-0e7b29abb114d925d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-07d75a9586cfdea5d",
            "default_route_table_id": "rtb-04174493034d3f249",
            "default_security_group_id": "sg-057e3afaa8cdab4ce",
            "dhcp_options_id": "dopt-0a2318fd7167900d8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7b29abb114d925d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04174493034d3f249",
            "owner_id": "628306021196",
            "tags": {
              "Name": "novapay-prod-eks-v2-vpc",
              "Project": "NovaPay"
            },
            "tags_all": {
              "Name": "novapay-prod-eks-v2-vpc",
              "Project": "NovaPay"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}